dms/dms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dms
  name: dms
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dms
  template:
    metadata:
      labels:
        app: dms
    spec:
      nodeName: esxi02
      imagePullSecrets:
      - name: demo-default-image-pull-secret
      containers:
      - image: 172.17.0.4/demo/dms:0.0.1
        name: dms
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/q/health"
            port: 8080
        livenessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/q/health"
            port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dms
  namespace: demo
  labels:
    supervisor_namespace: demo
    cluster_name: demo-cluster
spec:
  type: LoadBalancer
  selector:
    app: dms
  ports:
  - name: http
    port: 80
    targetPort: 8080
